fix PageSelect gap size weirdness by fixing it to 2px

--- a/ArtGallery.Frontend/wwwroot/css/site.css
+++ b/ArtGallery.Frontend/wwwroot/css/site.css
@@ -176,7 +176,7 @@ footer {
   display: flex;
   flex-direction: row;
   
-  gap: 0.1em;
+  gap: 2px;
 }
 
 .pageselect li {
